--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>SARankDirector-Minecraft.com</h1>
-        <h2>I code Stone(RED stone to be precise)</h2>
+        <h2>I code <span style="color: red;">Stone</span></h2>
 
         <section id="downloads">
           <a href="https://github.com/SARankDirector-Minecraft" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
